# kiro.rs

./: .gitignore  Cargo.toml  README.md  config.example.json  docker-compose.yml
.github/workflows/: docker-build.yaml
admin-ui/: package.json  vite.config.ts
admin-ui/src/: index.css
admin-ui/src/api/: credentials.ts
admin-ui/src/components/: add-credential-dialog.tsx  balance-dialog.tsx  batch-import-dialog.tsx  credential-card.tsx  dashboard.tsx  import-token-json-dialog.tsx  kam-import-dialog.tsx
admin-ui/src/hooks/: use-credentials.ts
admin-ui/src/lib/: format.ts  utils.ts
admin-ui/src/types/: api.ts
src/: image.rs  main.rs  token.rs
src/admin/: handlers.rs  router.rs  service.rs  types.rs
src/anthropic/: cache.rs  compressor.rs  converter.rs  handlers.rs  middleware.rs  mod.rs  router.rs  stream.rs  types.rs  websearch.rs
src/common/: mod.rs  redact.rs  utf8.rs
src/kiro/: affinity.rs  background_refresh.rs  cooldown.rs  fingerprint.rs  machine_id.rs  mod.rs  provider.rs  rate_limiter.rs  token_manager.rs  web_portal.rs
src/kiro/model/: credentials.rs  usage_limits.rs
src/model/: config.rs
