[package]
name = "kiro-rs"
version = "2026.2.7"
edition = "2024"

[profile.release]
lto = "thin"
strip = true

[features]
default = []
sensitive-logs = []

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v1", "v4", "fast-rng"] }
fastrand = "2"
sha2 = "0.10"
hex = "0.4"
crc = "3"
bytes = "1"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2"
parking_lot = "0.12"
subtle = "2.6"
rust-embed = "8"
mime_guess = "2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
